[metadata]
## Setuptools specific information
name = {{ cookiecutter.pkg_name }}
version = {{ cookiecutter.version }}
# renders on pypi as subtitle
description = {{ cookiecutter.pypi_subtitle }}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE.txt
platforms = Linux, Darwin
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}

# represents the web home page of the project
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}

download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/archive/v{{ cookiecutter.version }}.tar.gz


## PyPi specific information
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.repo_name }}/issues
    CI: Github Actions = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/actions
    Documentation = https://{{ cookiecutter.repo_name }}.readthedocs.io/
    Source Code = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
    Changelog = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/blob/master/CHANGELOG.rst
    Code of Conduct = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/blob/master/CONTRIBUTING.rst
    ; Mailing lists =


keywords = python package,
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:


[options.packages.find]
where=src


[options.extras_require]
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
    sphinx-rtd-theme==0.5.0
    sphinxcontrib-spelling
test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
typing =
    mypy


[options.package_data]
{{ cookiecutter.pkg_name }} =
    py.typed


# Influence what should be not flagged as an error, if not included in the distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    docs/patterns-implementations/*
    docs/static/*
    requirements/*
    scripts/*.py
    tox.ini
    .bettercodehub.yml
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml


#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev


[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests


[semantic_release]
version_variable = src/{{ cookiecutter.pkg_name }}/__init__.py:__version__
# version_source=tag
version_source=source
upload_to_pypi=false
upload_to_release=false
