[metadata]
## Setuptools specific information
name = pytest_object_getter
version = 1.0.1
# renders on pypi as subtitle
description = Import any object from a 3rd party module while mocking its namespace on demand.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE
platforms = All
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com
maintainer = Konstantinos Lampridis
maintainer_email = k.lampridis@hotmail.com

# represents the web home page of the project
url = https://github.com/boromir674/pytest-object-getter

download_url = https://github.com/boromir674/pytest-object-getter/archive/v1.0.1.tar.gz

## PyPi specific information
project_urls =
    Documentation = https://pytest-object-getter.readthedocs.io/
    Bug Tracker = https://github.com//pytest-object-getter/issues
    Source Code = https://github.com/boromir674/pytest-object-getter
    ; Changelog = https://pytest-object-getter.readthedocs.io/en/stable/changelog.html

keywords = python library
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
python_requires = > 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = pytest

[options.packages.find]
where=src

[options.extras_require]
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
    sphinxcontrib-spelling ~= 7.3.3

test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
    ask-pypi
typing =
    mypy

[options.package_data]
pytest_object_getter =
    py.typed


[options.entry_points]
pytest11 =
    pytest_object_getter = pytest_object_getter
# console_scripts =
#     <executable_name> = pytest_object_getter.__main__:entrypoint


# Influence what should be not flagged as an error, if not included in the distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    docs/static/*
    requirements/*
    scripts/*.py
    tox.ini
    .bettercodehub.yml
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml
