[metadata]
## Setuptools specific information
name = {{ cookiecutter.pkg_name }}
version = {{ cookiecutter.version }}

# renders on pypi as subtitle
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPL-3.0-only
license_files = LICENSE
platforms = All
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.author_email }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.author_email }}

# represents the web home page of the project
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}

download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/archive/v0.0.1.tar.gz

## PyPi specific information
project_urls =
    Documentation = https://{{ cookiecutter.repo_name }}.readthedocs.io/
    CI: Github Actions = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/actions
    Bug Tracker = https://github.com/{{ cookiecutter.repo_name }}/issues
    Source Code = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
    Changelog = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/blob/master/CHANGELOG.rst
    Code of Conduct = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/blob/master/CONTRIBUTING.rst

keywords = python package
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
python_requires = > 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = pytest

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
    pytest-run-subprocess ~= 0.9.0
    ask-pypi
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-autodoc-typehints>=1.10
    sphinxcontrib-spelling ~= 7.3.3
    sphinx-rtd-theme == 0.5.0
typing =
    mypy == 0.961

[options.package_data]
pytest_object_getter =
    py.typed


[options.entry_points]
pytest11 =
    {{ cookiecutter.pkg_name }} = {{ cookiecutter.pkg_name }}


# Influence what should be not flagged as an error, if not included in the
# distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    docs/static/*
    requirements/*
    scripts/*.py
    tox.ini
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml
