[metadata]
## Setuptools specific information
name = {{ cookiecutter.pkg_name }}
version = {{ cookiecutter.version }}
# renders on pypi as subtitle
description = {{ cookiecutter.pypi_subtitle }}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE.txt
platforms = All
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}

# represents the web home page of the project
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}

download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/archive/v{{ cookiecutter.version }}.tar.gz

## PyPi specific information
project_urls =
    Documentation = https://{{ cookiecutter.repo_name }}.readthedocs.io/
    Bug Tracker = https://github.com//{{ cookiecutter.repo_name }}/issues
    Source Code = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
    ; Changelog = https://{{ cookiecutter.repo_name }}.readthedocs.io/en/stable/changelog.html

keywords = python library
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
# install_requires =
# requirements per line, mostly in a >= format


[options.packages.find]
where=src


[options.extras_require]
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
    ; wheel>=0.36.0
    ; setuptools>=42.0.0;python_version < "3.10"
    ; setuptools>=56.0.0;python_version >= "3.10"


[options.package_data]
{{ cookiecutter.pkg_name }} =
    py.typed


; [options.entry_points]
; console_scripts =
    ; <executable_name> = {{ cookiecutter.pkg_name }}.__main__:entrypoint


# Influence what should be not flagged as an error, if not included in the distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    docs/patterns-implementations/*
    docs/static/*
    requirements/*
    scripts/*.py
    tox.ini
    .bettercodehub.yml
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml


#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev


[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests


[semantic_release]
version_variable = src/{{ cookiecutter.pkg_name }}/__init__.py:__version__
# version_source=tag
version_source=source
upload_to_pypi=false
upload_to_release=false
