
[tool.uv.build-backend]
module-name = "biskotaki"
module-root = "src"

source-include = [
    "tests/**",
    "docs/**/*.md",
    "mkdocs.yml",
    "src/**/*.typed",
    "src/stubs/*.pyi",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
]

# UV-COMPATIBLE PROJECT

[project]
name = "biskotaki"
version = "0.1.0"
description = "Project generated using https://github.com/boromir674/cookiecutter-python-package"
maintainers = [
    {name = "Konstantinos Lampridis", email = "k.lampridis@hotmail.com"},
]
authors = [
    {name = "Konstantinos Lampridis", email = "k.lampridis@hotmail.com"},
]
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

## ALLOWED PYTHON
requires-python = ">=3.8, <3.13"

## PROD DEPENDENCIES
dependencies = [
    
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-explicit>=1.0.1,<2.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
]
docs = [
    "sphinx >= 4.0.0, <5.0.0",
    "sphinx-autodoc-typehints >= 1.10, <2.0.0",
    "sphinx-rtd-theme == 0.5.0",
    "sphinxcontrib-spelling >= 7.3.3, <8.0.0",
    "sphinx-inline-tabs >= 2023.4.21, <2024.0.0",
    "sphinxcontrib-mermaid == 0.9.2",
]
typing = [
    "mypy==1.2.0",
    # "pytest>=7.4.4",
    "types-pyyaml>=6.0.12.5,<7.0.0.0",
    "types-requests>=2.27.26,<2.28.0",
]

# uv add 'requests [security,tests] >= 2.8.1, == 2.8.* ; python_version < "2.7"'
# uv add 'griffe >=1.0.0 ; python_version >= "3.9"'




# PyPi url links, that should appear in 'Project Links' section
[project.urls]
Repository = "https://github.com/boromir674/biskotaki"
Documentation = "https://biskotaki.readthedocs.io/"
Changelog = "https://github.com/boromir674/biskotaki/blob/master/CHANGELOG.md"
Releases = "https://github.com/boromir674/biskotaki/releases"


# TOOLS

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--strict-markers"
markers = [
    "slow: Marks a slow test",
    "integration: Integration Tests",
    "network_bound: Require internet connection",
    
]
testpaths = [
    "tests",
]
explicit-only = [
    "integration",
    "network_bound",
]

## DEV SEC OPS
[tool.bandit]
exclude_dirs = ["tests/data", "path/to/file"]
tests = []
skips = [
    "B101",
]

## MUTATION TESTS
[tool.mutmut]
tests_dir = "tests/"
runner = "python -m pytest -n auto"

paths_to_mutate = "src/biskotaki"

[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = 'black'
lines_after_imports = 2
